VERIFIED FIXED131728
[WebKit] Cleanup the build from uninitialized variable in JavaScriptCore
https://bugs.webkit.org/show_bug.cgi?id=131728
Summary [WebKit] Cleanup the build from uninitialized variable in JavaScriptCore
Shivakumar J M
Reported 2014-04-16 03:55:51 PDT
Found uninitialized variable used in JavaScriptCore/runtime/JSObject.cpp during webkit-efl port build. /home/shiva.jm/webkit-git/svngit/WebKit/Source/JavaScriptCore/runtime/JSObject.cpp:824:17: warning: ‘v’ is used uninitialized in this function [-Wuninitialized] JSValue v;
Attachments
Patch (1.36 KB, patch)
2014-04-16 10:12 PDT, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2014-04-16 10:04:39 PDT
(In reply to comment #0) > Found uninitialized variable used in JavaScriptCore/runtime/JSObject.cpp during webkit-efl port build. > > /home/shiva.jm/webkit-git/svngit/WebKit/Source/JavaScriptCore/runtime/JSObject.cpp:824:17: warning: ‘v’ is used uninitialized in this function [-Wuninitialized] > JSValue v; This seems wrong. JSValue has a default constructor, so it's not uninitialized. Sounds like your compiler is confused. One thing that might be worth fixing which would incidentally shut the compiler up is do add a default case with a RELEASE_ASSERT. If we don't hit a case in the switch statement then we have a debug ASSERT that will fire. Might as well add the release assert inside the branch that we'll never take.
Mark Hahnenberg
Comment 2 2014-04-16 10:12:05 PDT
WebKit Commit Bot
Comment 3 2014-04-16 11:10:25 PDT
Comment on attachment 229453 [details] Patch Clearing flags on attachment: 229453 Committed r167364: <http://trac.webkit.org/changeset/167364>
WebKit Commit Bot
Comment 4 2014-04-16 11:10:27 PDT
All reviewed patches have been landed. Closing bug.
Shivakumar J M
Comment 5 2014-04-29 23:11:47 PDT
Bug is fixed tested in version 167979.
Note You need to log in before you can comment on or make changes to this bug.