[WebKit] Cleanup the build from uninitialized variable in JavaScriptCore https://bugs.webkit.org/show_bug.cgi?id=131728

Reviewed by Darin Adler.

* runtime/JSObject.cpp:
(JSC::JSObject::genericConvertDoubleToContiguous): Add a RELEASE_ASSERT on the
path we expect to never take. Also shut up confused compilers about uninitialized things.


Canonical link: https://commits.webkit.org/149798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167364 268f45cc-cd09-0410-ab3c-d52691b4dbfc